@@ -1,3 +1,7 @@
+2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* gdk-card-image.c: Killed Imlib.
+
 Tue Feb 06 16:51:19 2001  George Lebl <jirka@5z.com>
 
 	* gdk-card-image.c: Deal with errors and missing files/directories
